# BEAR_AI

./: .env.alpha  .env.example  .env.production.example  .eslintrc.js  .eslintrc.overrides.js  .gitignore  BUILD_FIX_INSTRUCTIONS.md  BUILD_OPTIMIZATION_SUMMARY.md  BUILD_SUCCESS_VERIFICATION.md  CHANGELOG.md  CLEANUP.bat  CONTRIBUTING.md  CREATE_SHORTCUT.bat  CRITICAL_BUILD_ERRORS_ANALYSIS.md  ERORS.MD  ERRORS.MD  GDPR.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.bat  INSTALLATION_GUIDE.md  LICENSE  PLAN.md  PRIVACY.md  PRODUCTION-RELEASE-CHECKLIST.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_STATUS.md  README-HYBRID-ARCHITECTURE.md  README.md  README_ARCHITECTURE.md  README_pii.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  SOLUTION_COMPLETE.md  STREAMLINING_REPORT.md  TERMS.md  TypeScript_errors.md  UI_IMPLEMENTATION_GUIDE  UNIFIED_GUI_CONSOLIDATION_README.md  (+49 more)
.github/: README.md  WORKFLOW_BADGES.md  codeql-config.yml  dependabot.yml  trigger-build.txt
.venv312/: pyvenv.cfg
GUI/: .env.example  .eslintrc.js  PROJECT_SUMMARY.md  README.md  TESTING_SETUP_SUMMARY.md  index.html  jest.config.js  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  verify-setup.js  vite.config.ts  vitest-redirect.js  vitest.config.ts
RUN_LOGS/: comprehensive_gui_test_report.md  discovery_report.md  files_created.txt  gui_launch_analysis.md  gui_launcher_encoding_fix.py  working_gui_launch.bat
build-reports/: verification-report-1758046842690.json  verification-report-1758560473317.json  verification-report-1758561593137.json  verification-report-1758561842170.json
config/: base.json  coordination-patterns.json  development.json  initialization-state.json  memory-namespace.json  production.json  secrets-template.env  session-tracking.json  swarm-config.json  tsconfig.bear.json  unified.config.ts  vitest.bear.config.ts
docs/: AGENT_LIFECYCLE_MANAGEMENT.md  AGENT_ROLE_SPECIFICATIONS.md  AI_MODEL_MANAGEMENT.md  API_SPECIFICATIONS.md  ARCHITECTURAL_DECISION_RECORDS.md  ARCHITECTURE_SUMMARY.md  BEAR_AI_JAN_INTEGRATION_GUIDE.md  BUILD_OPTIMIZATION_GUIDE.md  CARGO_DEPENDENCY_ANALYSIS.md  CHANGELOG_v1.0.0.md  CLEANUP_COMPLETION_REPORT.md  CLI.md  CODE_SIGNING_GUIDE.md  COMPONENT_LIBRARY.md  COMPONENT_SPECIFICATIONS.md  COMPREHENSIVE_DEVELOPMENT_PLAN.md  DOCUMENTATION_OVERVIEW.md  DOCUMENTATION_UPDATE_SUMMARY.md  ENHANCED_ARCHITECTURE.md  ENHANCED_LEGAL_PII_SCRUBBING.md  ENHANCEMENT_COMPLETION_SUMMARY.md  ENVIRONMENT_MANAGEMENT_SUMMARY.md  ENVIRONMENT_SETUP.md  EXECUTION_READY_SUMMARY.md  FINAL_PROJECT_COMPLETION_SUMMARY.md  GPU_ACCELERATION_EXAMPLE.md  HARDWARE_GUIDE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TIMELINE.md  INSTALLATION.md  INSTALLATION_GUIDE.md  INSTALLATION_IMPROVEMENTS.md  INSTALLATION_MODEL_SELECTION.md  INTERFACE_SELECTION_GUIDE.md  ISSUE_REPORT.md  LANCE_DB_MIGRATION_SUMMARY.md  LEGACY_CODE_CLEANUP_REPORT.md  LEGAL_CHAT_INTERFACE.md  LOCALHOST_VALIDATION_REPORT.md  (+60 more)
examples/: legal_pii_demo.py
installer/: BEAR_AI_Native_Installer.bat  BEAR_AI_Windows_Installer.bat  INSTALLATION_GUIDE.txt  INSTALLATION_SUMMARY.md  README.md  README.txt  bear_ai_launcher.py  bear_ai_launcher_backup.py  build_installer.py  create_exe_installer.py  create_native_exe.py  final_installer_creator.py  install-bulletproof.bat  requirements-clean.txt  setup.py  simple_installer.py  test-installation.bat  uninstall.bat
memory/: build-status-memory.json  memory-store.json
pii/: __init__.py  audit.py  config.py  custom_nl_ids.py  policy.py  scrubber.py
public/: index.html
scripts/: build-pipeline.ps1  build-production.js  build-release.sh  build-simple.js  build-status-report.ps1  build-windows-installer.ps1  build_exe.py  ci-integration.yml  cleanup-build.ps1  cleanup-build.sh  cleanup-installers.js  create_shortcut.bat  create_shortcut.ps1  deploy-production.ps1  deploy-unsigned.ps1  emergency-build.bat  emergency-build.sh  emergency-cargo-fix.ps1  emergency-cleanup.bat  env-health.js  env-security-report.js  env-validate.js  fix-cargo-build.ps1  fix-eslint-warnings.js  fix-python-deps.js  install-bear-ai.js  install-bear-ai.ps1  install-bear-ai.sh  install.bat  install.ps1  launch_gui.py  launch_gui_utf8.bat  migrate_modules.py  optimize-build.sh  patch-ajv.js  postinstall-message.js  production-checklist.md  production-ready-check.js  run-react-build.js  run-tauri-build.js  (+24 more)
security/: AUTHENTICATION_SECURITY_AUDIT.md  COMPREHENSIVE_SECURITY_PENETRATION_TEST_REPORT.md  REMEDIATION_IMPLEMENTATION.md
src/: App.tsx  README.md  index.css  index.html  index.tsx  reportWebVitals.ts  tauri.d.ts
src-tauri/: Cargo.minimal.toml  Cargo.toml  LICENSE.rtf  LICENSE.txt  app.manifest  build.rs  entitlements.plist  tauri.conf.alpha.json  tauri.conf.json
src-tauri/.cargo/: audit.toml  config.toml
src-tauri/assets/: README.md
src-tauri/capabilities/: README.md  legal-compliance.json
src-tauri/icons/: README.md
src-tauri/installer-hooks/: before-install.nsh  vcredist-install.nsh
src-tauri/src/: chat_export.rs  document_analyzer.rs  enterprise_management.rs  hardware_detection.rs  huggingface.rs  lib.rs  licensing.rs  llm_commands.rs  llm_manager.rs  local_api.rs  main.rs  main.rs.backup  main_updated.rs  mcp_server.rs  model_commands.rs  mollie_integration.rs  nemotron_rag.rs  ocr_processor.rs  performance_tracker.rs  pii_detector.rs  security.rs  stripe_integration.rs  stripe_integration_v2.rs
src-tauri/templates/: README.md
src-tauri/tests/: common.rs  document_tests.rs  mod.rs  performance_tests.rs  pii_tests.rs  security_tests.rs  session_management_tests.rs  stripe_tests.rs
tests/: README.md  conftest.py  integration_test.py  jest.config.js  playwright.config.ts  setup.ts  test_assess.py  test_chat.py  test_cli.py  test_custom_nl_ids.py  test_download.py  test_gui.py  test_hw.py  test_launch_methods.py  test_legal_pii_detection.py  test_main.py  test_model_downloader.py  test_modern_gui.py  test_professional_gui.py  test_rag.py  test_scrub.py  test_scrubber_basic.py  test_security.py  test_security_pii.py  (+1 more)
(+829 files in other folders)
